--- a/SistemaVentas/src/main/java/com/admin/PanelProducto.form
+++ b/SistemaVentas/src/main/java/com/admin/PanelProducto.form
@@ -28,7 +28,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jlDescription">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Descripcion: "/>
+        <Property name="text" type="java.lang.String" value="Descripci&#xf3;n: "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
