--- a/SistemaVentas/src/main/java/com/admin/PanelUser.form
+++ b/SistemaVentas/src/main/java/com/admin/PanelUser.form
@@ -88,7 +88,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jlCurp">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Curp: "/>
+        <Property name="text" type="java.lang.String" value="CURP:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
