--- a/SistemaVentas/src/main/java/com/main/Login.form
+++ b/SistemaVentas/src/main/java/com/main/Login.form
@@ -34,7 +34,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="PanelDerecho" alignment="0" max="32767" attributes="0"/>
+          <Component id="PanelDerecho" alignment="0" pref="704" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
