ya estan las tablas, en la de usuario ya puedes borrar

--- a/SistemaVentas/src/main/java/com/admin/PrincipalAdmin.form
+++ b/SistemaVentas/src/main/java/com/admin/PrincipalAdmin.form
@@ -544,7 +544,7 @@
                 <Property name="phColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="placeholder" type="java.lang.String" value="SEARCH"/>
+                <Property name="placeholder" type="java.lang.String" value="Buscar"/>
               </Properties>
             </Component>
           </SubComponents>
